<resources>
    <string name="app_name">Where parking</string>
    <string name="Label1">Настройки</string>
    <string name="title_activity_main">Где запарковаться</string>

    <string name="hello_world">Hellow world</string>
    <string name="action_settings">Настройки</string>
    <string name="action_exit">Остановить</string>
    <string name="action_choose_title">Выбрать сторону</string>
    <string name="action_sound_recorder">Запись звука</string>
    <string name="title_activity_parking_point_list">Мои места парковки</string>
    <string name="pp_list_show">Места парковки</string>
    <string name="action_add">Добавить</string>
    <string name="action_edit">Редактировать</string>
    <string name="action_delete">Удалить</string>
    <string name="title_activity_ppdetail">Место парковки</string>
    <string name="coordinatsLabel">Координаты</string>
    <string name="altutude">Широта</string>
    <string name="longitude">Долгота</string>
    <string name="PPDetailSides">Стороны парковки</string>
    <string name="pref_fire_distance">Дистанция срабатывания</string>
    <string name="pref_fire_distance_description">Дистанция в км, при приближении ближе которой к точке парковки сработает определение стороны.</string>
    <string name="ppNameLabel">Название</string>
    <string name="action_add_side">Добавить сторону</string>
    <string name="title_activity_ppedit">Редактирование места парковки</string>
    <string name="bSave">Сохранить</string>
    <string name="title_activity_map">Карта</string>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>

    <string-array name="pref_distance_titles">
        <item>500м</item>
        <item>1км</item>
        <item>1.5км</item>
        <item>2км</item>
    </string-array>
    <string-array name="pref_distance_values">
        <item>500</item>
        <item>1000</item>
        <item>1500</item>
        <item>2000</item>
    </string-array>
    <string name="title_activity_notification">NotificationActivity</string>
    <string name="period_format_mask">dd дней, HH часов, mm минут</string>
    <string name="title_activity_psedit">Редактирование стороны парковки</string>
    <string name="psLabelName">Название</string>
    <string name="labelLongitude">Долгота</string>
    <string name="labelLatitude">Широта</string>
    <string name="labelCoordinates">Координаты</string>
    <string name="labelMessage">Текст сообщения</string>
    <string name="labelPPName">Точка парковки</string>
    <!--<string name="pref_description_with_sound">Проигрывать звуковой файл, если он задан.</string>-->
    <!--<string name="pref_title_with_sound">Звуковое оповещение</string>-->
</resources>
