<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:background="@drawable/background"
                tools:context="ru.pva33.whereparking.PSEditActivity">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/title_activity_psedit"
        android:textSize="24dp"
        android:textStyle="bold|italic"
        />
    <TextView
        android:id="@+id/labelName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/psLabelName"
        android:layout_alignBottom="@+id/edName"
        />
    <EditText
        android:id="@+id/edName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvTitle"
        android:layout_toRightOf="@+id/labelName"
        android:layout_toLeftOf="@+id/bSound"
        android:inputType="text"
        />
    <ImageButton
        android:id="@+id/bSound"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/sound"
        android:nestedScrollingEnabled="false"
        android:onClick="onClick"
        />

    <TextView
        android:id="@+id/labelSoundFileName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/edName"
        android:layout_marginTop="12dp"
        android:text="Звук"
        android:textAppearance="?android:attr/textAppearanceSmall"
        />
    <TextView
        android:id="@+id/tvSoundPath"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/labelSoundFileName"
        android:layout_toLeftOf="@+id/bSound"
        android:layout_toRightOf="@+id/labelSoundFileName"
        android:layout_toStartOf="@+id/bSound"
        android:text="tvSoundPath"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:paddingLeft="12px"
        />
    <TextView
        android:id="@+id/labelMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignBottom="@+id/edMessage"
        android:text="@string/labelMessage"
        android:textAppearance="?android:attr/textAppearanceSmall"
        />

    <EditText
        android:id="@+id/edMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/bSound"
        android:layout_toRightOf="@+id/labelMessage"
        android:inputType="text"
        android:layout_alignRight="@+id/bSound"
        android:layout_alignEnd="@+id/bSound"
        />
    <TextView
        android:id="@+id/labelPPName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/edMessage"
        android:paddingTop="20px"
        android:text="@string/labelPPName"
        android:textAppearance="?android:attr/textAppearanceSmall"
        />
    <TextView
        android:id="@+id/PPName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/labelPPName"
        android:layout_alignBottom="@+id/labelPPName"
        android:text=". . ."
        android:paddingLeft="12px"
        />

    <ListView
        android:id="@+id/listView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:longClickable="true"
        android:layout_below="@+id/PPName"
        android:layout_above="@+id/bSave"
        />


    <Button
        android:id="@+id/bSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:onClick="onClick"
        android:text="@string/bSave"
        />
</RelativeLayout>
